Added and using transform class

--- a/Source/Graphics.vcxproj.filters
+++ b/Source/Graphics.vcxproj.filters
@@ -3,8 +3,10 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="BufferObject.cpp" />
+    <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BufferObject.h" />
+    <ClInclude Include="Transform.h" />
   </ItemGroup>
 </Project>
