More rotation functions for transform

--- a/Source/Graphics.vcxproj
+++ b/Source/Graphics.vcxproj
@@ -89,7 +89,9 @@
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actor.h" />
     <ClInclude Include="BufferObject.h" />
+    <ClInclude Include="IComponent.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
