--- a/Source/Graphics.vcxproj.filters
+++ b/Source/Graphics.vcxproj.filters
@@ -8,5 +8,7 @@
   <ItemGroup>
     <ClInclude Include="BufferObject.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="Actor.h" />
+    <ClInclude Include="IComponent.h" />
   </ItemGroup>
 </Project>
