--- a/Source/Graphics.vcxproj
+++ b/Source/Graphics.vcxproj
@@ -84,14 +84,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="ActorManager.cpp" />
     <ClCompile Include="BufferObject.cpp" />
+    <ClCompile Include="Exception.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="ActorManager.h" />
     <ClInclude Include="BufferObject.h" />
+    <ClInclude Include="Exception.h" />
     <ClInclude Include="IComponent.h" />
+    <ClInclude Include="Pool.h" />
+    <ClInclude Include="Singleton.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
