--- a/Source/Graphics.vcxproj
+++ b/Source/Graphics.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="ActorManager.cpp" />
     <ClCompile Include="BufferObject.cpp" />
+    <ClCompile Include="ComponentTransform.cpp" />
     <ClCompile Include="Exception.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Transform.cpp" />
@@ -95,6 +96,7 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="ActorManager.h" />
     <ClInclude Include="BufferObject.h" />
+    <ClInclude Include="ComponentTransform.h" />
     <ClInclude Include="Exception.h" />
     <ClInclude Include="IComponent.h" />
     <ClInclude Include="Pool.h" />
