--- a/Source/Graphics.vcxproj
+++ b/Source/Graphics.vcxproj
@@ -99,6 +99,7 @@
     <ClInclude Include="ComponentTransform.h" />
     <ClInclude Include="Exception.h" />
     <ClInclude Include="IComponent.h" />
+    <ClInclude Include="Noncopyable.h" />
     <ClInclude Include="Pool.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Transform.h" />
